Bug 201751 - [ARM] broken buildkernel after "vt: Draw logos per CPU core" D2181
Summary: [ARM] broken buildkernel after "vt: Draw logos per CPU core" D2181
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: arm Any
: --- Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-22 04:16 UTC by Andrey Fesenko
Modified: 2015-07-22 15:35 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Fesenko 2015-07-22 04:16:34 UTC
After "vt: Draw logos per CPU core" D2181 broken buildkernel
log https://bsdnir.info/files/_.buildkernel.armv6-RPI-B.log

if revert sys/conf/files and sys/dev/vt/ on 285761 kernel build fine, log https://bsdnir.info/files/buildkernel.armv6-RPI-B.log
Comment 1 Conrad Meyer 2015-07-22 14:08:02 UTC
https://reviews.freebsd.org/D3151
Comment 2 commit-hook freebsd_committer freebsd_triage 2015-07-22 15:31:07 UTC
A commit references this bug:

Author: cem
Date: Wed Jul 22 15:30:11 UTC 2015
New revision: 285794
URL: https://svnweb.freebsd.org/changeset/base/285794

Log:
  vt: Unbreak build on no-splash configurations

  PR:		201751
  Differential Revision:	https://reviews.freebsd.org/D3151
  Tested by:	Andrey Fesenko
  Approved by:	markj (mentor)
  MFC after:	1 week

Changes:
  head/sys/dev/vt/vt_core.c