vt: Unbreak build on no-splash configurations

PR:		201751
Differential Revision:	https://reviews.freebsd.org/D3151
Tested by:	Andrey Fesenko
Approved by:	markj (mentor)
MFC after:	1 week

Former-commit-id: d3a6fde5ce79051616d9bdad3a4eca49ddca7b5f